--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -16,7 +16,7 @@ server {
 		root /home/box/web;
 	}
 
-	location ~ \.\w\w?\w?\w?$ {
+	 location ~* ^.+\.\w+$ {
 		root /home/box/web/public;
 	}
 }
